--- a/env.yml
+++ b/env.yml
@@ -1,51 +1,6 @@
 name: ActorCritic
 channels:
-  - defaults
+  - conda-forge
 dependencies:
-  - ca-certificates=2024.3.11=hecd8cb5_0
-  - libcxx=14.0.6=h9765a3e_0
-  - libffi=3.4.4=hecd8cb5_1
-  - ncurses=6.4=hcec6c5f_0
-  - openssl=3.0.13=hca72f7f_1
-  - pip=24.0=py39hecd8cb5_0
-  - python=3.9.19=h5ee71fb_1
-  - readline=8.2=hca72f7f_0
-  - setuptools=69.5.1=py39hecd8cb5_0
-  - sqlite=3.45.3=h6c40b1e_0
-  - tk=8.6.14=h4d00af3_0
-  - tzdata=2024a=h04d1e81_0
-  - wheel=0.43.0=py39hecd8cb5_0
-  - xz=5.4.6=h6c40b1e_1
-  - zlib=1.2.13=h4b97444_1
-  - pip:
-      - box2d-py==2.3.8
-      - cloudpickle==3.0.0
-      - contourpy==1.2.1
-      - cycler==0.12.1
-      - filelock==3.14.0
-      - fonttools==4.51.0
-      - fsspec==2024.5.0
-      - gym==0.26.2
-      - gym-notices==0.0.8
-      - importlib-metadata==7.1.0
-      - importlib-resources==6.4.0
-      - jinja2==3.1.4
-      - kiwisolver==1.4.5
-      - markupsafe==2.1.5
-      - matplotlib==3.8.4
-      - mpmath==1.3.0
-      - networkx==3.2.1
-      - numpy==1.26.4
-      - packaging==24.0
-      - pillow==10.3.0
-      - pygame==2.5.2
-      - pyparsing==3.1.2
-      - python-dateutil==2.9.0.post0
-      - six==1.16.0
-      - sympy==1.12
-      - tdqm==0.0.1
-      - torch==2.2.2
-      - tqdm==4.66.4
-      - typing-extensions==4.11.0
-      - zipp==3.18.1
-prefix: /Users/mshokrnezhad/opt/anaconda3/envs/ActorCritic
+  - pip=24.0
+  - python=3.9
